--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@storybook/react": "^6.5.9",
     "@storybook/test-runner": "^0.4.0",
     "@storybook/testing-library": "0.0.13",
+    "@storybook/theming": "^6.5.16",
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
